css/styles.css
/* ... */
.events .see-btn{
    text-decoration: none;
    color: #e8054c;
    border: 1px solid #e8054c;
    border-radius: 1.2rem;
    padding: 0.5rem 2rem;
    font-family: Silo-Bold;
    margin: 2rem;
}

.connect{
    height: 40vh;
    background-image: url('../img/connect.png');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: #e8054c;
    background-blend-mode: screen;
    display: flex;
    align-items: center;
    justify-content: center;
}

.connect .connect-btn{
    font-size: 2rem;
    font-family: Silo-Bold;
    border: 1px solid #ffffff;
    color: #ffffff;
    text-decoration: none;
    padding: 1rem 2rem;
}

footer{
    height: 15vh;
    font-size: 1.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

footer .social{
    position: absolute;
    right: 10%;
}

footer .social i{
    margin-right: 1.5rem;
    color: #e8054c;
}

@media screen and (max-width: 1215px){
    .header-content{
        display: flex;
        /* margin: 0 7rem; */
        position: relative;
        overflow: hidden;
    }
    
    .header-content .left{
        z-index: 1;
        height: calc(100vh - 2rem);
        width: 50%;
        display: flex;
        align-items: center;
        position: relative;
    }
    
    .header-content .left .icons{
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        font-size: 32px;
        height: 40vh;
    }
    
    .header-content .left .icons .icon img{
        width: 32px;
    }
    
    .header-content .left .text{
        position: absolute;
        left: 8rem;
        bottom: 6rem;
    }
    
    .header-content .left .firstname{
        color: #e8054c;
        font-size: 3.5rem;
        font-family: Silo-Regular;
        margin: 0px;
    }
    
    .header-content .left .surnname{
        color: #e8054c;
        font-size: 3.5rem;
        font-family: Silo-Bold;
        margin: 0px;
    }
    
    .header-content .left .skills{
        font-size: 1.5rem;
        font-family: OpenSans-LightItalic;
        margin: 0px;
        width: 400px;
    }
    
    .header-content .right{
        position: relative;
        height: calc(100vh - 2rem);
        top: 20%;
        width: 100rem;
        background-image: url('../img/header.png');
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
        background-color: #0f1c2c;
        background-blend-mode: lighten;
    }

    .volume, .toggle{
        display: none;
    }

    .table-responsive{
        width: 100%;
        overflow-x: auto;
    }
}

@media screen and (max-width: 945px){
    .music-player{
        display: flex;
        align-items: center;
        padding: 0.3rem 2rem;
        border-bottom: 2px solid #e8054c;
        height: 80px;
        width: calc(100% - 22rem);
        /* margin: 0 7rem; */
        background-color: #00000091;
        z-index: 1;
        position: absolute;
        bottom: 2rem;
    }

    .time .seek-bar{
        width: 200px;
    }
}
/* ... */

